--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "require": {
     "php": "^8.2",
-    "illuminate/support": "^11.0",
+    "illuminate/support": "^11.0||^12.0",
     "guzzlehttp/guzzle": "^7.8",
     "laravel/socialite": "^5.0"
   },
