--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "laravel/socialite": "^5.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^9.0"
+    "orchestra/testbench": "^9.0||^10.0"
   },
   "autoload": {
     "psr-4": {
