--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   test:
     name: test
@@ -29,5 +33,5 @@ jobs:
       - name: Code Coverage
         uses: qltysh/qlty-action/coverage@v1
         with:
-          token: ${{ secrets.QLTY_COVERAGE_TOKEN }}
+          oidc: true
           files: build/logs/clover.xml
